--- a/index.html
+++ b/index.html
@@ -51,14 +51,16 @@
       <nav role="navigation">
         <div class="wrap">
           <h2><a href="#" class="icon-menu"><span>Menu</span></a></h2>
-                    <ul>
+          <div class="nav-wrap">
+                      <ul>
             <li class='current'><a class='current' href="index.html">Home</a></li>
             <li><a href="about/index.html">About us</a></li>
             <li><a href="services/index.html">Services</a></li>
-            <!-- <li><a href="testimonials/index.html">Testimonials</a></li> -->
+            <li><a href="testimonials/index.html">Testimonials</a></li>
             <li><a href="prices/index.html">Prices</a></li>
             <li><a href="contact/index.html">Contact us<span> / Make an appointment</span></a></li>
           </ul>
+          </div>
         </div>
       </nav>
       
@@ -71,8 +73,8 @@
 
   <div class="column">
     <h2>About us</h2>
-    <p class="intro"><b>Anne Saunders Physiotherapy offers a professional, friendly and accessible musuloskeletal physiotherapy service with our primary aims to reduce or eliminate pain and maximise the overall health and well being of our patients.</b></p>
-    <p class="intro">As a Chartered Physiotherapist with over 15 years experience, we know how important it is to get better as quickly as possible and back to doing the things you love.</p>
+    <p class="intro"><b>Anne Saunders Physiotherapy offers a professional, friendly and accessible musculoskeletal physiotherapy service with the primary aims being to reduce or eliminate pain and maximise the overall health and wellbeing of a person.</b></p>
+    <p class="intro">As a chartered physiotherapist with over 15 years experience I know how important it is to you to get better as quickly as possible and back to doing the things you love.</p>
     <p><a href="about/index.html" class="button">More about us</a></p>
   </div>
 
