--- a/prices/index.html
+++ b/prices/index.html
@@ -51,14 +51,16 @@
       <nav role="navigation">
         <div class="wrap">
           <h2><a href="#" class="icon-menu"><span>Menu</span></a></h2>
-                    <ul>
+          <div class="nav-wrap">
+                      <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="../about/index.html">About us</a></li>
             <li><a href="../services/index.html">Services</a></li>
-            <!-- <li><a href="../testimonials/index.html">Testimonials</a></li> -->
+            <li><a href="../testimonials/index.html">Testimonials</a></li>
             <li class='current'><a class='current' href="index.html">Prices</a></li>
             <li><a href="../contact/index.html">Contact us<span> / Make an appointment</span></a></li>
           </ul>
+          </div>
         </div>
       </nav>
       
