--- a/contact/index.html
+++ b/contact/index.html
@@ -42,7 +42,7 @@
           </div>
 
           <div class="email">
-            <a href="mailto:annesaundersphysio@outlook.com" class="button">Email us</a>
+            <a href="mailto:contact@annesaundersphysiotherapy.co.uk" class="button">Email us</a>
           </div>
         </div>  
 
@@ -93,7 +93,7 @@
       <a href="tel:07748763932" class="tel">07748763932</a>
     </p>
     
-    <p>Or email: <a href="mailto:annesaundersphysio@outlook.com" class="email">annesaundersphysio@outlook.com</a></p>
+    <p>Or email: <a href="mailto:contact@annesaundersphysiotherapy.co.uk" class="email">contact@annesaundersphysiotherapy.co.uk</a></p>
     
     <p class="divide-top">You can also find us on <a href="https://www.facebook.com/AnneSaundersPhysiotherapy">Facebook</a> and <a href="https://twitter.com/AnneSaunders11">Twitter</a>.</p>
   </div>
