--- a/testimonials/index.html
+++ b/testimonials/index.html
@@ -42,7 +42,7 @@
           </div>
 
           <div class="email">
-            <a href="mailto:annesaundersphysio@outlook.com" class="button">Email us</a>
+            <a href="mailto:contact@annesaundersphysiotherapy.co.uk" class="button">Email us</a>
           </div>
         </div>  
 
