--- a/contact/index.html
+++ b/contact/index.html
@@ -35,9 +35,9 @@
 
     <link rel="canonical" href="http://www.annesaundersphysiotherapy.co.uk">
 
-    <link rel='stylesheet' href='../assets/css/application.css'> 
+    <link rel='stylesheet' href='../assets/042390a8f4ebae54641a3fd4a45cd0ff.css'> 
 
-    <script src='../assets/js/jquery-2.2.1.min.js'></script>
+    <script src='../assets/fb66845bb4ce640ad6c456196238b201.js'></script>
 
     <title>Contact Anne Saunders Physiotherapy</title>
 
@@ -186,7 +186,7 @@
       </div>
     </footer>
       
-    <script src='../assets/js/application.js'></script>
+    <script src='../assets/5cbc1bc53c7c92c967c00831b36dcade.js'></script>
 
   </body>
 </html>
