--- a/testimonials/index.html
+++ b/testimonials/index.html
@@ -49,7 +49,7 @@
       <div class="logo wrap">
       
         <h1>
-          <a href="/" rel="home" title="Back to the homepage">
+          <a href="../index.html" rel="home" title="Back to the homepage">
             <img src="../assets/img/logos/header.png" alt="Anne Saunders Physiotherapy">
           </a>
         </h1>
@@ -74,7 +74,7 @@
           <h2><a href="#" class="icon-menu"><span>Menu</span></a></h2>
           <div class="nav-wrap">
                       <ul>
-            <li><a href="/">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="../about/index.html">About us</a></li>
             <li><a href="../services/index.html">Services</a></li>
             <li class='current'><a class='current' href="index.html">Testimonials</a></li>
