--- a/testimonials/index.html
+++ b/testimonials/index.html
@@ -35,6 +35,8 @@
 
     <link rel="canonical" href="http://www.annesaundersphysiotherapy.co.uk">
 
+    <base href="/">
+
     <link rel='stylesheet' href='../assets/css/application.css'> 
 
     <script src='../assets/js/jquery-2.2.1.min.js'></script>
