updating footer referer

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
           </li>
         </ul>
         
-        <p class="credit">Website by <a href="http://brassbot.com">Brassbot</a></p>
+        <p class="credit">Website by <a href="http://recodesign.co.uk">RECODESIGN</a></p>
 
       </div>
     </footer>
