Privacy notice added

--- a/testimonials/index.html
+++ b/testimonials/index.html
@@ -185,7 +185,7 @@
           </li>
         </ul>
         
-        <p class="credit">Website by <a href="http://recodesign.co.uk">RECODESIGN</a></p>
+        <p><a href="../privacy-notice.html">Privacy notice</a></p>
       </div>
     </footer>
       
