--- a/contact/index.html
+++ b/contact/index.html
@@ -163,7 +163,7 @@
           </li>
         </ul>
         
-        <p class="credit">Website by <a href="http://recodesign.co.uk">RECODESIGN</a></p>
+        <p><a href="../privacy-notice.html">Privacy notice</a></p>
       </div>
     </footer>
       
