Mobile navigation, 404 page fixes

--- a/privacy-notice.html
+++ b/privacy-notice.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <base href="/">
     <meta charset="utf-8">
     <meta name="handheldfriendly" content="true">
     <meta name="mobileoptimized" content="width">
@@ -22,7 +23,7 @@
 <meta name="theme-color" content="#ffffff">
 
     <link rel="canonical" href="http://www.annesaundersphysiotherapy.co.uk">
-    <link rel='stylesheet' href='assets/css/application.css'> 
+    <link rel='stylesheet' href='assets/2f6af52f0e7edf1704b3d0165a8de7de.css'> 
 
     <title>Privacy notice Anne Saunders Physiotherapy</title>
   </head>
@@ -160,8 +161,7 @@
       </div>
     </footer>
       
-    <script src='assets/js/jquery-2.2.1.min.js'></script>
-<script src='assets/js/application.js'></script>
+    <script src='assets/1ad7690f272b1942be4b10935dacbd01.js'></script>
 
   </body>
 </html>
