--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     
-    <p>The content from <b>annesaundersphysiotherapy.co.uk</b> has moved to <a href="https://www.sunnyside-clinic.co.uk/physiotherapy/">Sunnyside Clinic</a>.</p>
+    <p>The content from <b>Anne Saunders Physiotherapy</b> has moved to<br><a href="https://www.sunnyside-clinic.co.uk/physiotherapy/">Sunnyside Clinic</a></p>
   
   </body>
 </html>
