--- a/404.html
+++ b/404.html
@@ -13,11 +13,12 @@
       body {margin: 0; padding: 1rem; background: #f2f2f2; font: 1rem/1.5 "Open Sans", Arial, sans-serif; color: #333; text-align: center;}
       p {margin: 50px auto; padding: 2rem; max-width: 300px; background: white;}
       a {font-weight: 700; text-decoration: none; color: #5DA9DD;}
+      span {display: block;}
     </style>
   </head>
   <body>
     
-    <p>The content from <b>Anne Saunders Physiotherapy</b> has moved to<br><a href="https://www.sunnyside-clinic.co.uk/physiotherapy/">Sunnyside Clinic</a></p>
+    <p>The content from <span><b>Anne Saunders Physiotherapy</b></span> has moved to <span><a href="https://www.sunnyside-clinic.co.uk/physiotherapy/">Sunnyside Clinic</a></span></p>
   
   </body>
 </html>
