--- a/index2.html
+++ b/index2.html
@@ -42,9 +42,8 @@
         <div class="contact">
           <div class="numbers">
             <dl>
-              <dt class="intro">For appointment bookings please call:</dt>
-              <dd><a href="tel:01706210585" class="tel icon-phone">01706 210585</a></dd>
-              <dd><a href="tel:07748763932" class="tel icon-mobile">07748763932</a></dd>
+              <dt class="intro">For appointment bookings</dt>
+              <dd><a href="tel:07708631616" class="tel icon-mobile">07708 631616</a></dd>
             </dl>
           </div>
 
@@ -77,7 +76,7 @@
   <div class="column">
     <h2>About us</h2>
     <p class="intro"><b>Anne Saunders Physiotherapy offers a professional, friendly and accessible musculoskeletal physiotherapy service with the primary aims being to reduce or eliminate pain and maximise the overall health and wellbeing of a person.</b></p>
-    <p class="intro">As a chartered physiotherapist with over 15 years experience I know how important it is to you to get better as quickly as possible and back to doing the things you love.</p>
+    <p class="intro">As a chartered physiotherapist with over 20 years experience I know how important it is to you to get better as quickly as possible and back to doing the things you love.</p>
     <p><a href="about/index.html" class="button">More about us</a></p>
   </div>
 
@@ -142,19 +141,7 @@
             </span>
           </p>
         </div>
-              
-        <ul class="social">
-          <li>
-            <a href="https://www.facebook.com/AnneSaundersPhysiotherapy" class="icon-facebook">
-              <span>Find us on Facebook</span>
-            </a>
-          </li>
-          <li>
-            <a href="https://twitter.com/AnneSaunders11" class="icon-twitter">
-              <span>Follow us on Twitter</span>
-            </a>
-          </li>
-        </ul>
+
         
         <p><a href="privacy-notice.html">Privacy notice</a></p>
       </div>
