--- a/privacy-notice.html
+++ b/privacy-notice.html
@@ -42,9 +42,8 @@
         <div class="contact">
           <div class="numbers">
             <dl>
-              <dt class="intro">For appointment bookings please call:</dt>
-              <dd><a href="tel:01706210585" class="tel icon-phone">01706 210585</a></dd>
-              <dd><a href="tel:07748763932" class="tel icon-mobile">07748763932</a></dd>
+              <dt class="intro">For appointment bookings</dt>
+              <dd><a href="tel:07708631616" class="tel icon-mobile">07708 631616</a></dd>
             </dl>
           </div>
 
@@ -143,19 +142,7 @@
             </span>
           </p>
         </div>
-              
-        <ul class="social">
-          <li>
-            <a href="https://www.facebook.com/AnneSaundersPhysiotherapy" class="icon-facebook">
-              <span>Find us on Facebook</span>
-            </a>
-          </li>
-          <li>
-            <a href="https://twitter.com/AnneSaunders11" class="icon-twitter">
-              <span>Follow us on Twitter</span>
-            </a>
-          </li>
-        </ul>
+
         
         <p><a class='current' href="privacy-notice.html">Privacy notice</a></p>
       </div>
