--- a/prices/index.html
+++ b/prices/index.html
@@ -42,9 +42,8 @@
         <div class="contact">
           <div class="numbers">
             <dl>
-              <dt class="intro">For appointment bookings please call:</dt>
-              <dd><a href="tel:01706210585" class="tel icon-phone">01706 210585</a></dd>
-              <dd><a href="tel:07748763932" class="tel icon-mobile">07748763932</a></dd>
+              <dt class="intro">For appointment bookings</dt>
+              <dd><a href="tel:07708631616" class="tel icon-mobile">07708 631616</a></dd>
             </dl>
           </div>
 
@@ -87,33 +86,29 @@
         </thead>
         <tbody>
           <tr>
-            <td>Initial consultation including assessment &amp; treatment <small>(50 mins)</small></td>
-            <td class="align-centre">&pound;45</td>
+            <td>Initial assessment &amp; treatment <small>(50 mins)</small></td>
+            <td class="align-centre">&pound;55</td>
           </tr>
           <tr>
-            <td>Follow-up appointment <small>(40 mins)</small></td>
-            <td class="align-centre">&pound;38</td>
+            <td>Follow-up treatment sessions <small>(40 mins)</small></td>
+            <td class="align-centre">&pound;43</td>
           </tr>
           <tr>
             <td>Home visit</td>
             <td class="align-centre">&pound;60</td>
           </tr>
           <tr>
-            <td>Single pilates class *</td>
-            <td class="align-centre">&pound;8</td>
+            <td>Pilates classes *</td>
+            <td class="align-centre">&pound;7.50</td>
           </tr>
           <tr>
-            <td>6 pre-booked pilates classes *</td>
+            <td>Pilates 1:1 session</td>
             <td class="align-centre">&pound;40</td>
-          </tr>
-          <tr>
-            <td>Pilates 1:1 Session</td>
-            <td class="align-centre">&pound;24</td>
           </tr>
         </tbody>
       </table>
 
-      <p><small>* Maximum 8 people per class</small></p>
+      <p><small>* paid in pre-bookable blocks</small></p>
     </div>
 
     <div class="column">
@@ -167,19 +162,7 @@
             </span>
           </p>
         </div>
-              
-        <ul class="social">
-          <li>
-            <a href="https://www.facebook.com/AnneSaundersPhysiotherapy" class="icon-facebook">
-              <span>Find us on Facebook</span>
-            </a>
-          </li>
-          <li>
-            <a href="https://twitter.com/AnneSaunders11" class="icon-twitter">
-              <span>Follow us on Twitter</span>
-            </a>
-          </li>
-        </ul>
+
         
         <p><a href="../privacy-notice.html">Privacy notice</a></p>
       </div>
