--- a/privacy-notice.html
+++ b/privacy-notice.html
@@ -133,7 +133,7 @@
 
           <p>
             <span class="adr">
-              <span>Sunnyside Clinic,</span>
+              <span>Oakwood Therapy Centre,</span>
               <span class="street-address">542 Burnley Road,</span>
               <span class="locality">Crawshawbooth,</span>
               <span class="locality">Rossendale,</span>
