--- a/testimonials/index.html
+++ b/testimonials/index.html
@@ -162,7 +162,7 @@
 
           <p>
             <span class="adr">
-              <span>Sunnyside Clinic,</span>
+              <span>Oakwood Therapy Centre,</span>
               <span class="street-address">542 Burnley Road,</span>
               <span class="locality">Crawshawbooth,</span>
               <span class="locality">Rossendale,</span>
