privacy policy update

--- a/privacy-notice.html
+++ b/privacy-notice.html
@@ -85,9 +85,9 @@
   <li>We also think it is important that we are able to contact you when needed to confirm appointments or update you on any matters related to your medical care.</li>
 </ol>
 
-<p>None of your medical records are stored electronically. All our paper records are securely stored in line data protection laws.  By law we have to keep these records for 8 years (or until a patient is 25 years of age). After this period you can ask us to destroy your records if you wish. Otherwise we will retain your records indefinitely in order that we provide you with the best possible care should you need to see us at future dates.</p>
+<p>Clinical notes and data are stored electronically with Nookal practice management software. <a href="https://www.nookal.com/uk/legal/gdpr" target="_blank">Read more about Nookal's GDPR compliance</a>. By law we have to keep these records for 8 years (or until a patient is 25 years of age). After this period you can ask us to destroy your records if you wish. Otherwise we will retain your records indefinitely in order that we provide you with the best possible care should you need to see us at future dates.</p>
 
-<p>Any data sent electronically ie – letters to GP / consultants will be password protected. No medical data will be stored on the computer however we may email you with permission information relating to your treatment. This will be done by computers with appropriate security packages installed.</p>
+<p>Any data sent externally such as letters to GP / Consultants will only be sent with your permission either via secure email by computers with appropriate security packages or postage. Consent to send this information will be obtained by the patient prior to sending. No medical data will be stored on the computer however we may email you with permission information relating to your treatment. This will be done by computers with appropriate security packages installed.</p>
 
 <p>We will never share your data with anyone who does not need access without your written consent. Only the following people will have routine access to your data:</p>
 
