--- a/prices/index.html
+++ b/prices/index.html
@@ -87,28 +87,32 @@
         <tbody>
           <tr>
             <td>Initial assessment &amp; treatment <small>(50 mins)</small></td>
-            <td class="align-centre">&pound;55</td>
-          </tr>
-          <tr>
-            <td>Follow-up treatment sessions <small>(40 mins)</small></td>
-            <td class="align-centre">&pound;43</td>
-          </tr>
-          <tr>
-            <td>Home visit</td>
             <td class="align-centre">&pound;60</td>
           </tr>
           <tr>
-            <td>Pilates classes *</td>
-            <td class="align-centre">&pound;7.50</td>
+            <td>Follow-up treatment sessions <small>(40 mins)</small></td>
+            <td class="align-centre">&pound;45</td>
+          </tr>
+          <tr>
+            <td>Home visit</td>
+            <td class="align-centre">&pound;65</td>
+          </tr>
+          <tr>
+            <td>Pilates classes - Pay as you go</td>
+            <td class="align-centre">&pound;9.50</td>
+          </tr>
+          <tr>
+            <td>Pilates classes - Pay in advance *</td>
+            <td class="align-centre">&pound;8</td>
           </tr>
           <tr>
             <td>Pilates 1:1 session</td>
-            <td class="align-centre">&pound;40</td>
+            <td class="align-centre">&pound;45</td>
           </tr>
         </tbody>
       </table>
 
-      <p><small>* paid in pre-bookable blocks</small></p>
+      <p><small>* Requires pre-booking of classes</small></p>
     </div>
 
     <div class="column">
